--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     -->
     <script src="https://kit.fontawesome.com/94ea1a6536.js" crossorigin="anonymous"></script>
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
